# romea-core-gps

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  romea_gps.repos  romea_gps.rosinstall  romea_gps_public.repos
cmake/: romea_core_gpsConfig.cmake.in  romea_gpsConfig.cmake.in
include/romea_core_gps/: GPSReceiver.hpp  GPSReceiverEUREs.hpp
include/romea_core_gps/nmea/: GGAFrame.hpp  GSVFrame.hpp  GSVFrameAggregator.hpp  HDTFrame.hpp  NMEAAngle.hpp  NMEAFixDate.hpp  NMEAFixQuality.hpp  NMEAFixTime.hpp  NMEALatitude.hpp  NMEALongitude.hpp  NMEAModeIndicator.hpp  NMEAParsing.hpp  NMEATalker.hpp  RMCFrame.hpp
include/romea_core_gps/reliability/: GPSReliability.hpp  HalfNormalDistribution.hpp  SNRDistribution.hpp  SatellitesInView.hpp
include/romea_gps/nmea/: GGAFrame.hpp  GSVFrame.hpp  NMEAFixDate.hpp  NMEAFixQuality.hpp  NMEAFixTime.hpp  NMEALatitude.hpp  NMEAParsing.hpp  NMEATalker.hpp  RMCFrame.hpp
include/romea_gps/reliability/: GPSReliability.hpp  HalfNormalDistribution.hpp
src/: GPSReceiver.cpp  GPSReceiverEUREs.cpp
src/nmea/: GGAFrame.cpp  GSVFrame.cpp  GSVFrameAggregator.cpp  HDTFrame.cpp  NMEAAngle.cpp  NMEAFixDate.cpp  NMEAFixQuality.cpp  NMEAFixTime.cpp  NMEALatitude.cpp  NMEALongitude.cpp  NMEAParsing.cpp  NMEATalker.cpp  RMCFrame.cpp
src/reliability/: GPSReliability.cpp  HalfNormalDistribution.cpp  SNRDistribution.cpp  SatellitesInView.cpp
test/: CMakeLists.txt  test.cpp
